--- a/database.yml
+++ b/database.yml
@@ -1,13 +1,13 @@
 development:
   dialect: postgres
-  database: transim_development
-  user: postgres
-  password: postgres
+  database: transim_dev
+  user: lee
+  password: 
   host: 127.0.0.1
   pool: 5
 
 test:
-  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/transim_test?sslmode=disable"}}
+  url: {{envOr "TEST_DATABASE_URL" "postgres://lee:@127.0.0.1:5432/transim_test?sslmode=disable"}}
 
 production:
-  url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@127.0.0.1:5432/transim_production?sslmode=disable"}}
+  url: {{envOr "DATABASE_URL" "postgres://lee:@127.0.0.1:5432/transim?sslmode=disable"}}
